tests/compile_errors/var-not-assigned.buzz
// Local `m` is declared `var` but is never assigned
fun h() > void {
    var m = [];
    _ = m;
}

